<resources>
    <string name="app_name">SpiseApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_corders">Orders</string>
    <string name="title_activity_cprofile">Profile</string>
    <string name="title_activity_cadresses">My Adresses</string>
    <string name="title_activity_clogout">Logout</string>
    <string name="navigation_open">Open navigation drawer</string>
    <string name="navigation_close">Close navigation drawer</string>
    <string name="past_orders">Past Orders</string>
    <string name="order_history">Order History</string>
    <string name="menu_my_orders">My Orders</string>
    <string name="menu_my_profile">My profile</string>
    <string name="menu_my_addresses">My addresses</string>
    <string name="menu_my_vouchers">My Vouchers</string>
    <string name="menu_terms">Terms and Conditions</string>
    <string name="menu_logout">Log out</string>
    <string name="reorder">REORDER</string>
    <string name="contactinfo">Contact info</string>
    <string name="name">Amna Akram</string>
    <string name="email">amna.akram185@gmail.com</string>
    <string name="phone">+929999999</string>
    <string name="edit">EDIT</string>
    <string-array name="restaurantsorder">
        <item>
            Daily-deli co
        </item>

        <item>
           KFC-Johar Town
        </item>
        <item>
            Subway-Faisal Town
        </item>
        <item>
            Daily-deli co
        </item>
        <item>
           McDonalds
        </item>
        <item>
            Hardees
        </item>
        <item>
           KFC
        </item>
        <item>
            Daily-deli co
        </item>
        <item>
            Howdy
        </item>
        <item>
            McDonalds
        </item>

    </string-array>
    <string-array name="orders_hist">
        <item>
            Daily-deli co
        </item>

        <item>
            Daily-deli co
        </item>
        <item>
            Daily-deli co
        </item>
        <item>
            Daily-deli co
        </item>
        <item>
            Daily-deli co
        </item>
        <item>
            Daily-deli co
        </item>
        <item>
            Daily-deli co
        </item>
        <item>
            Daily-deli co
        </item>
        <item>
            Daily-deli co
        </item>
        <item>
            Daily-deli co
        </item>

    </string-array>
    <string-array name="orders_date">
        <item>
            2019-08-19
        </item>

        <item>
            2019-07-18
        </item>
        <item>
             2019-06-17
        </item>
        <item>
            2019-05-19
        </item>
        <item>
             2019-03-19
        </item>
        <item>
           2019-02-19
        </item>
        <item>
            2019-01-1
        </item>
        <item>
            2018-08-19
        </item>
        <item>
             2018-06-9
        </item>
        <item>
            2018-06-1
        </item>

    </string-array>
    <string-array name="orders_total">
        <item>
            Rs 1500
        </item>

        <item>
            Rs 3000
        </item>
        <item>
             Rs 5500
        </item>
        <item>
             Rs 1580
        </item>
        <item>
              Rs 1000
        </item>
        <item>
           Rs 1800
        </item>
        <item>
            Rs 1900
        </item>
        <item>
            Rs 8500
        </item>
        <item>
              Rs 6500
        </item>
        <item>
            Rs 7500
        </item>

    </string-array>
    <string name="title_activity_customer_location">Map</string>
    <string name="title_activity_restaurant_profile">Profile</string>
    <string name="title_activity_restaurant_order_requests">Order Requests</string>
    <string name="title_activity_restaurant_order_history">Order History</string>
    <string name="title_activity_restaurant_update_menu">Update Menu</string>
    <string name="title_activity_restaurant_logout">Logout</string>
    <string-array name="customer_gmails">
        <item>
            amna.akram185@gmail.com
        </item>

        <item>
            abianoor456@gmail.com
        </item>
        <item>
             ali.haider185@gmail.com
        </item>
        <item>
             wiz@gmail.com
        </item>
        <item>
            emi@gmail.com
        </item>
        <item>
           emi@gmail.com
        </item>
        <item>
             ali.haider185@gmail.com
        </item>
        <item>
            ali@gmail.com
        </item>
        <item>
               wiz@gmail.com
        </item>
        <item>
            wiz@gmail.com
        </item>

    </string-array>
    <string-array name="customer_addresses">
        <item>
            Johar town
        </item>

        <item>
            faisal town
        </item>
        <item>
             model town
        </item>
        <item>
              PCSIR
        </item>
        <item>
            Johar town
        </item>
        <item>
           faisal town
        </item>
        <item>
              Johar town
        </item>
        <item>
           faisal town
        </item>
        <item>
               PCSIR
        </item>
        <item>
            model town
        </item>

    </string-array>
    <string-array name="caddresses">
        <item>
            189E2 Street 12 Johar Town, Lahore
        </item>

        <item>
           FAST NUCES Faisal Town gate no 1, Lahore
        </item>


    </string-array>
    <string name="restaurant_owner_first_name">Fawad</string>
    <string name="restaurant_owner_last_name">Ali</string>
    <string name="restaurant_email">fawadali@gmail.com</string>
    <string name="restaurant_address">132F6 Johar Town,Lahore</string>
    <string name="restaurant_phone_number">04237766885</string>
    <string name="restaurant_name">KFC JT</string>
    <string name="restaurant_city">Lahore</string>
    <string name="Cuisine">Cuisine</string>
    <string name="restaurant_price_filter">Select Price Filter</string>
    <string-array name="cuisines">
        <item>
          Pakistani
        </item>

        <item>
            Fast Food
        </item>
        <item>
             Pizza
        </item>
        <item>
              Burgers
        </item>
        <item>
           Desserts
        </item>
        <item>
           Chinese
        </item>
        <item>
              Italian
        </item>
        <item>
           Sea Food
        </item>
        <item>
              Thai
        </item>
        <item>
           Greek
        </item>

    </string-array>
    <string name="title_activity_customer_pickup_location">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_geolocate">Pick Place</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="ForgotPass">
        <a href="www.google.com">
        Forgot Password?
        </a>
    </string>
    <string name="SignUpCus">Sign Up as Customer</string>
    <string name="SignUpClient">Sign Up as Client</string>
    <string name="Fname">First Name</string>
    <string name="Sname">Second Name</string>
    <string name="Email">Email</string>
    <string name="loginLink"><a>Log-In</a></string>
    <string name="lowprice">$$</string>
    <string name="averageprice">$$$</string>
    <string name="highprice">$$$$</string>
    <string-array name="RestuarnatNames">
        <item>Mcdonalds- JoharTown</item>
        <item>KFC-JoharTown</item>
        <item>Subway-JoharTown</item>
    </string-array>
    <string-array name="DeliveryPrice">
        <item>Free Delivery</item>
        <item>Free Delivery</item>
        <item>Delivery Price: 50Rs</item>
    </string-array>
    <string-array name="Category">
        <item>Fast Food</item>
        <item>Fast Food</item>
        <item>Fast Food</item>
    </string-array>
    <string-array name="PricesRes">
        <item>@string/averageprice</item>
        <item>@string/lowprice</item>
        <item>@string/averageprice</item>
    </string-array>
    <string-array name="DeliveryTimes">
        <item>30 MIN</item>
        <item>35 MIN</item>
        <item>40 MIN</item>
    </string-array>
    <string-array name="rating">
        <item>4</item>
        <item>4</item>
        <item>3</item>
    </string-array>
    <string-array name="FoodNames">
        <item>BigMac</item>
        <item>McFries</item>
        <item>Spicy Chicken Burger</item>
        <item>McNuggets</item>
    </string-array>
    <string-array name="FoodItemPrices">
        <item>400 Rs</item>
        <item>120 Rs</item>
        <item>250 Rs</item>
        <item>400 Rs</item>
    </string-array>
    <string-array name="OptionName">
        <item>Choose: </item>
        <item>Choose Drink:</item>
    </string-array>
    <string-array name="Option1">
        <item>With Cheese</item>
        <item>Without Cheese</item>
    </string-array>
    <string-array name="Option2">
        <item>Coke</item>
        <item>Mountain Dew</item>
    </string-array>
    <string-array name="CartItemNames">
        <item>BigMac</item>
        <item>McFries</item>
        <item>Spicy Chicken Burger</item>
        <item>McNuggets</item>
        <item>McNuggets</item>
    </string-array>
    <string-array name="CartItemPrices">
        <item>400 Rs</item>
        <item>120 Rs</item>
        <item>250 Rs</item>
        <item>400 Rs</item>
        <item>400 Rs</item>
    </string-array>
    <string-array name="category">
        <item>Pakistani</item>
        <item>Burgers</item>
        <item>Fast Food</item>
        <item>Pizza</item>
        <item>Italian</item>
        <item>Chinese</item>
        <item>Thai</item>
        <item>Asian</item>
        <item>Deserts</item>
    </string-array>
    <string name="select_location">Select Location</string>
    <string-array name="location_array">
        <item>Current Location</item>
        <item>Add Location</item>

    </string-array>
    <string name="user_name">Abia Noor</string>
    <string name="resume_title">Student | Bachelors in Computer Science</string>
    <string name="user_address">Lahore,Pakistan </string>
    <string-array name="home">
        <item>Home</item>
        <item>Profile</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact_information">Contact Information</string>
    <string name="Address">Lahore, Pakistan</string>
    <string name="description">Description</string>
    <string name="AboutMe_Title">About Me</string>
    <string name="Question1">Career Goal</string>
    <string name="Question2">Ownership</string>
    <string name="experience">Experience</string>
    <string name="hands_on_skills">Skills</string>
    <string name="phoneNumber">+923004403739</string>
    <string name="Linkedin_IdLink">https://www.linkedin.com/in/abia-noor-407a51193/</string>
    <string name="Linkedin_UserName">AbiaNoor</string>
    <string name="Github_UserName">abia456</string>
    <string name="Github_IdLink">https://github.com/abia456</string>
</resources>