<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.CustomerProfile.CProfile"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.cardview.widget.CardView
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"

        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:paddingBottom="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp">




            <TextView
                android:id="@+id/profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="Profile"
                android:textColor="@color/colorMenu"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.045"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.274" />

            <TextView
                android:id="@+id/res_fname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/restaurant_owner_first_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.045"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/res_lname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restaurant_owner_last_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.006"
                app:layout_constraintStart_toEndOf="@+id/res_fname"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.482" />

            <TextView
                android:id="@+id/res_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restaurant_email"
                app:layout_constraintEnd_toEndOf="@+id/res_lname"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/res_fname"
                app:layout_constraintTop_toBottomOf="@+id/res_fname" />

            <TextView
                android:id="@+id/res_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restaurant_phone_number"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/res_email"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/res_email"
                app:layout_constraintTop_toBottomOf="@+id/res_email"
                app:layout_constraintVertical_bias="0.08" />

            <TextView
                android:id="@+id/res_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restaurant_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/res_phone"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/res_phone"
                app:layout_constraintTop_toBottomOf="@+id/res_phone"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/res_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restaurant_city"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/res_phone"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/res_name"
                app:layout_constraintTop_toBottomOf="@+id/res_name" />

            <TextView
                android:id="@+id/res_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:textColor="@color/colorMenu"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.834"
                app:layout_constraintStart_toEndOf="@+id/res_email"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.603" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>
</LinearLayout>
