<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpCustomer"
    android:layout_margin="20dp"
    >


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="67dp"
        android:layout_marginLeft="67dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="67dp"
        android:layout_marginRight="67dp"
        android:text="@string/SignUpCus"
        android:textColor="@color/Purple"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/FNAme"
        android:layout_width="160dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="51dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/Fname"

        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/SName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/SName"
        android:layout_width="160dp"
        android:layout_height="43dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/Sname"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/Email_cus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SName" />

    <EditText
        android:id="@+id/CustomerPostalAddress"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="House Address"
        android:inputType="textPostalAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email_cus" />

    <EditText
        android:id="@+id/CustomerPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="Phone Number"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CustomerPostalAddress" />

    <EditText
        android:id="@+id/CustomerPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CustomerPhoneNumber" />

    <Button
        android:id="@+id/SignupCusbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginLeft="158dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="158dp"
        android:layout_marginRight="158dp"
        android:background="@drawable/rectangle"
        android:text="Sign Up"
        android:textColor="@color/white"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CustomerPassword" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="83dp"
        android:layout_marginLeft="83dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:text="Already have an account?"
        app:layout_constraintEnd_toStartOf="@+id/LoginFromSignCustomer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignupCusbtn" />

    <TextView
        android:id="@+id/LoginFromSignCustomer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="77dp"
        android:layout_marginRight="77dp"
        android:text="@string/loginLink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/CustomerPassword" />

    <ProgressBar
        android:id="@+id/SignupCustProgress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.436"
        app:layout_constraintStart_toStartOf="@+id/CustomerPassword"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        android:outlineSpotShadowColor="@color/colorMenu"
        app:layout_constraintVertical_bias="0.44" />


</androidx.constraintlayout.widget.ConstraintLayout>