<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchFilter"
    android:layout_margin="50dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Choose price filter"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"

        >

    </TextView>
    <CheckBox
        android:id="@+id/priceCheckbox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lowprice"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"
        />

    <CheckBox
        android:id="@+id/priceCheckbox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/averageprice"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="30dp"
        />

    <CheckBox
        android:id="@+id/priceCheckbox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highprice"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="30dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Choose cuisine filter"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="30dp"
        ></TextView>

    <CheckBox
        android:id="@+id/CuisineCheckbox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pakistani"
        android:layout_marginTop="140dp"
        android:layout_marginLeft="30dp"
        />

    <CheckBox
        android:id="@+id/CuisineCheckbox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Chinese"
        android:layout_marginTop="160dp"
        android:layout_marginLeft="30dp"
        />
    <CheckBox
        android:id="@+id/CuisineCheckbox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Italian"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="30dp"
        />

    <CheckBox
        android:id="@+id/CuisineCheckbox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Fast Food"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="30dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Choose Offer filter"
        android:layout_marginTop="240dp"
        android:layout_marginLeft="30dp"
        ></TextView>


    <CheckBox
        android:id="@+id/OfferCheckbox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Free Delivery"
        android:layout_marginTop="260dp"
        android:layout_marginLeft="30dp"
        />


    <CheckBox
        android:id="@+id/OfferCheckbox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="20% off"
        android:layout_marginTop="280dp"
        android:layout_marginLeft="30dp"
        />

    <CheckBox
        android:id="@+id/OfferCheckbox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="40% off"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="30dp"
        />
    <CheckBox
        android:id="@+id/OfferCheckbox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="50% off"
        android:layout_marginTop="320dp"
        android:layout_marginLeft="30dp"
        />


    <Button
        android:id="@+id/Filterbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="360dp"
        android:background="@color/Purple"
        android:text="Filter"

        android:textColor="@color/white"></Button>

</RelativeLayout>